# mediapipe-livelink

./: .gitignore  CMakeLists.txt  LICENSE  LiveLink.md  README.md  README_EN.md  blend_shape_config.json  main.cpp
include/: livelink.hpp  mediapipe.hpp  mediapipe_library.h  util.hpp
include/asio/: any_io_executor.hpp  append.hpp  as_tuple.hpp  associated_allocator.hpp  associated_cancellation_slot.hpp  associated_executor.hpp  associator.hpp  async_result.hpp  awaitable.hpp  basic_datagram_socket.hpp  basic_deadline_timer.hpp  basic_file.hpp  basic_io_object.hpp  basic_random_access_file.hpp  basic_raw_socket.hpp  basic_readable_pipe.hpp  basic_seq_packet_socket.hpp  basic_serial_port.hpp  basic_signal_set.hpp  basic_socket.hpp  basic_socket_acceptor.hpp  basic_socket_iostream.hpp  basic_socket_streambuf.hpp  basic_stream_file.hpp  basic_stream_socket.hpp  basic_streambuf.hpp  basic_streambuf_fwd.hpp  basic_waitable_timer.hpp  basic_writable_pipe.hpp  bind_allocator.hpp  bind_cancellation_slot.hpp  bind_executor.hpp  buffer.hpp  buffer_registration.hpp  buffered_read_stream.hpp  buffered_read_stream_fwd.hpp  buffered_stream.hpp  buffered_stream_fwd.hpp  buffered_write_stream.hpp  buffered_write_stream_fwd.hpp  (+81 more)
include/asio/detail/: array.hpp  array_fwd.hpp  assert.hpp  atomic_count.hpp  base_from_cancellation_state.hpp  base_from_completion_cond.hpp  bind_handler.hpp  blocking_executor_op.hpp  buffer_resize_guard.hpp  buffer_sequence_adapter.hpp  buffered_stream_storage.hpp  bulk_executor_op.hpp  call_stack.hpp  chrono.hpp  chrono_time_traits.hpp  completion_handler.hpp  concurrency_hint.hpp  conditionally_enabled_event.hpp  conditionally_enabled_mutex.hpp  cstddef.hpp  is_buffer_sequence.hpp
include/asio/execution/: allocator.hpp  any_executor.hpp  bad_executor.hpp  blocking.hpp  blocking_adaptation.hpp  bulk_execute.hpp  bulk_guarantee.hpp  connect.hpp  context.hpp  context_as.hpp  execute.hpp  executor.hpp  invocable_archetype.hpp  mapping.hpp  occupancy.hpp  operation_state.hpp  outstanding_work.hpp  prefer_only.hpp  receiver.hpp  receiver_invocation_error.hpp  relationship.hpp  schedule.hpp  scheduler.hpp  sender.hpp  set_done.hpp  set_error.hpp  set_value.hpp  start.hpp  submit.hpp
include/asio/experimental/: append.hpp  as_single.hpp  as_tuple.hpp  awaitable_operators.hpp  basic_channel.hpp  basic_concurrent_channel.hpp  cancellation_condition.hpp  channel.hpp  channel_error.hpp  channel_traits.hpp  co_spawn.hpp  concurrent_channel.hpp  coro.hpp  coro_traits.hpp  (+5 more)
include/livelink/: blend_shape_config.hpp  face_live_link.hpp  live_link_base.hpp
include/mediapipe/: mediapipe_api.h  mediapipe_interface.h  mediapipe_log.h
include/nlohmann/: adl_serializer.hpp  byte_container_with_subtype.hpp  json.hpp  json_fwd.hpp  ordered_map.hpp
src/: main.cpp  test.cpp
(+296 files in other folders)
